# aoc-haskell-template

./: README.md  aoc-solutions.cabal  aoc2019.cabal
app/: Input.hs  Main.hs
lib/Aoc/Day/One/: Common.hs  PartOne.hs  PartTwo.hs
test/: DayOneSpec.hs
tool/aoc/: Gen.hs  Main.hs  Options.hs  Print.hs
tool/aoc/Aoc/Tool/: Gen.hs  Options.hs
