cabal-version:      2.4
name:               aloussase-aoc-solutions
version:            0.1.0.0
synopsis:           Solutions to advent of code challenges
bug-reports:        https://github.com/aloussase/aloussase-aoc-solutions
license:            MIT
author:             Alexander Goussas
maintainer:         goussasalexander@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: README.md

library
    exposed-modules:
          Aoc.Day.One.PartOne
        , Aoc.Day.One.PartTwo
        , Aoc.Day.One.Common
    build-depends:
          base ^>=4.15.1.0
        , text
        , containers
        , bytestring
    hs-source-dirs:   lib
    default-language: Haskell2010
    default-extensions: OverloadedStrings

executable aloussase-aoc-solutions-exe
   main-is: Main.hs
   other-modules: Input
   build-depends:
          base ^>=4.15.1.0
        , aloussase-aoc-solutions
        , text
        , directory
        , filepath
   hs-source-dirs: app
   default-language: Haskell2010
   default-extensions: OverloadedStrings

test-suite test-solutions
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    other-modules:
        DayOneSpec
    build-depends:
            base ^>=4.15.1.0
          , hspec
          , aloussase-aoc-solutions
    default-language: Haskell2010
    default-extensions: OverloadedStrings


executable aoc
   main-is: Main.hs
   other-modules: Options, Gen, Print
   build-depends:
          base ^>=4.15.1.0
        , text
        , directory
        , filepath
        , optparse-applicative
        , unix
   hs-source-dirs: tool/aoc
   default-language: Haskell2010
   default-extensions: OverloadedStrings
