cabal-version:      2.4
name:               aoc-solutions
version:            0.1.0.0
synopsis:           Solutions to advent of code challenges
-- bug-reports:
license:            MIT
-- author:
-- maintainer:
-- copyright:
-- category:
extra-source-files: README.md

library
    exposed-modules:
          Aoc.Day.One.PartOne
        , Aoc.Day.One.PartTwo
        , Aoc.Day.One.Common
    build-depends:
          base ^>=4.15.1.0
        , array
        , bytestring
        , containers
        , text
    hs-source-dirs:   lib
    default-language: Haskell2010
    default-extensions: OverloadedStrings

executable aoc-runner
   main-is: Main.hs
   other-modules: Input
   build-depends:
          base ^>=4.15.1.0
        , aoc-solutions
        , directory
        , filepath
        , text
   hs-source-dirs: app
   default-language: Haskell2010
   default-extensions: OverloadedStrings

test-suite test-solutions
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    other-modules:
        DayOneSpec
    build-depends:
            base ^>=4.15.1.0
          , aoc-solutions
          , hspec
    default-language: Haskell2010
    default-extensions: OverloadedStrings


executable aoc
   main-is: Main.hs
   other-modules:
        Aoc.Tool.Options
      , Aoc.Tool.Gen
      , Aoc.Tool.Print
   build-depends:
          base ^>=4.15.1.0
        , directory
        , filepath
        , optparse-applicative
        , text
        , unix
   hs-source-dirs: tool/aoc
   default-language: Haskell2010
   default-extensions: OverloadedStrings
